# mcp-study

./: .gitignore  README.md  main.py  mcp_agent.py  mcp_client.py  mcp_server.json  pyproject.toml  requirements.txt
core/: context.py  kubeconfig.py
mcp_tools/: k8s_mcp_instance.py  mcp_server_k8s.py  mcp_server_rag.py  mcp_server_time.py  mcp_server_weather.py  mcp_server_youtube.py
models/: context.py
resources/: contexts.py
tools/: cluster.py  configmap.py  daemonset.py  deployment.py  ingress.py  namespace.py  node.py  pod.py  pv.py  pvc.py  replicaset.py  role.py  secret.py  service.py  serviceaccount.py  statefulset.py
