[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.1.3",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.34",
    "langgraph-checkpoint>=2.0.25",
    "langgraph-prebuilt>=0.1.8",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.3",
    "typing-extensions>=4.13.2",
]